--- a/app.css
+++ b/app.css
@@ -13,10 +13,10 @@
   
   ---------------------------------------------------------------------- */
   :root {
-      --color-lightest: #ffcdcd;
-      --color-light: #ee6c6c;
-      --color: #EC6565;
-      --color-dark: #ca4e4e;
+      --color-lightest: #e4ffcd;
+      --color-light: #84ee6c;
+      --color: #79ec65;
+      --color-dark: #4eca52;
       --font: "Open Sans", Helvetica, sans-serif;
   }
 
